--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,10 @@ services:
     image: portalnetwork/trin:latest
     environment:
       RUST_LOG: info
-    command: "--web3-transport http --web3-http-address http://0.0.0.0:8545/ --mb 0 --bootnodes default"
+    command: "--web3-transport http --web3-http-address http://0.0.0.0:8545/ --external-address 0.0.0.0:9009 --mb 0 --bootnodes default"
     ports:
       - "8545:8545"
+      - "9009:9009"
     networks:
       - glados-net
     restart: always
