--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,13 @@ services:
 
   trin:
     hostname: trin
-    image: portalnetwork/trin:latest
+    image: kolbyml/trin:latest
     environment:
       RUST_LOG: info
     command: "--web3-transport http --web3-http-address http://0.0.0.0:8545/ --no-upnp --mb 0 --bootnodes default"
-    ports:
-      - "8545:8545"
-      - "9009:9009"
-    networks:
-      - glados-net
+    network_mode: host
+    exposed_ports:
+      - "8545"    
     restart: always
 
   glados_audit:
