--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,10 @@ services:
       POSTGRES_DB: glados
     volumes:
       - ${GLADOS_POSTGRES_DATA_DIR?Glados Postgres Data Directory Required}:/var/lib/postgresql/data
-    network_mode: host
+    ports:
+      - "5432:5432"
+    networks:
+      - glados-net
     restart: always
 
   trin:
@@ -18,7 +21,11 @@ services:
     environment:
       RUST_LOG: info
     command: "--web3-transport http --web3-http-address http://0.0.0.0:8545/ --no-upnp --mb 0 --bootnodes default"
-    network_mode: host
+    ports:
+      - "8545:8545"
+      - "9009:9009"
+    networks:
+      - glados-net
     restart: always
 
   glados_audit:
@@ -29,7 +36,8 @@ services:
     depends_on:
       - glados_postgres
       - trin
-    network_mode: host
+    networks:
+      - glados-net
     restart: always
 
   glados_monitor:
@@ -40,7 +48,8 @@ services:
     depends_on:
       - glados_audit
       - glados_postgres
-    network_mode: host
+    networks:
+      - glados-net
     restart: always
 
   glados_web:
@@ -51,7 +60,10 @@ services:
     depends_on:
       - glados_monitor
       - glados_postgres
-    network_mode: host
+    ports:
+      - "3001:3001"
+    networks:
+      - glados-net
     restart: always
 
   glados_cartographer:
@@ -63,5 +75,10 @@ services:
       - glados_web
       - glados_postgres
       - trin
-    network_mode: host
+    networks:
+      - glados-net
     restart: always
+
+networks:
+  glados-net:
+    driver: bridge
